# TKOM

./: CMakeLists.txt  README.md
src/: ErrorsCommunicator.cpp  ErrorsCommunicator.h  Factory.cpp  Factory.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Product.h  Source.cpp  Source.h  Storehouse.cpp  Storehouse.h  main.cpp
src/structs/: TextPosition.cpp  TextPosition.h
src/structs/objects/: ObjectType.h  Objects.cpp  Objects.h
src/structs/tokens/: Token.cpp  Token.h  TokenType.h
src/structs/variables/: VariableType.cpp  VariableType.h
src/tests/: JSON.json  JSON_tokens.out
src/tests/testCase1/: Testcase1.cpp  Testcase1.h  confJSON.json  dataJSON.json
